<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APPA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_prestamos">ActivityPrestamos</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

    <string name="lblIdLocal">Introduce la ID:</string>
    <string name="lblNombreLocal">Digite Nombre del Local:</string>
    <string name="lblNombreMarca">Digite Nombre de la Marca:</string>

    <string name="btnGuardar">Guardar</string>
    <string name="btnMostrar">Mostrar Entradas</string>
    <string name="title_activity_marca">marca</string>
    <string name="title_activity_local">Local</string>
    <string name="title_activity_activity_local">ActivityLocal</string>
    <string name="title_activity_activity_marca">ActivityMarca</string>
    <string name="title_activity_activity_persona">ActivityPersona</string>
    <string name="title_activity_interfaz_prestamos">InterfazPrestamos</string>
    <string name="title_activity_activity_list">ActivityList</string>

    <string name="hello_blank_fragment">Hello local fragment</string>
    <string name="take_photo">Toma una fotografía</string>
    <string name="from_gallery">Escoge desde la galeria</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="crear">Crear</string>
    <string name="choose_image">Escoge una Imagen</string>
    <string name="title_activity_cargar_imagen">cargarImagen</string>
    <string name="lista_prestamos">lista Prestamos</string>
    <string name="cedula">Cédula:</string>
    <string name="cedula_hint">Introduce aqui tu cedula</string>
    <string name="nombre">Nombre:</string>
    <string name="nombre_hint">Introduce tus nombres y tus apellidos</string>
    <string name="Telefono">Telefono:</string>
    <string name="telefono_hint">555-555-5555</string>
    <string name="foto">Foto:</string>
    <string name="texto"><u><b><i>jomaings15@gmail.com</i></b></u></string>

    <string name="listaLocales"><b><i>LISTA DE LOCALES</i></b></string>
    <string name="listaPersonal"><b><i>LISTA DE PERSONAL</i></b></string>
    <string name="listaMarcas"><b><i>LISTA DE MARCAS</i></b></string>

    <string name="localesPaolo"><b><i>LOCALES PAOLOSPORT</i></b></string>
    <string name="personalPaolo"><b><i>PERSONAL PAOLOSPORT</i></b></string>
    <string name="marcasPaolo"><b><i>MARCAS PAOLOSPORT</i></b></string>

    <string name="title_activity_activity_configuracion">Configuración</string>


    <!-- Lista de iconos de locales-->
    <array name="navigation_iconos">
        <item>@drawable/casa_i</item>
        <item>@drawable/casa_a</item>
        <item>@drawable/casa_e</item>
        <item>@drawable/casa_o</item>
        <item>@drawable/casa_g</item>
        <item>@drawable/casa_c</item>
        <item>@drawable/casa_b</item>
        <item>@drawable/casa_h</item>
        <item>@drawable/casa_f</item>
        <item>@drawable/casa_d</item>
        <item>@drawable/casa_p</item>

    </array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="lst_prestamos">Lista</string>
    <string name="frm_prestamos">Formulario</string>
    <string name="delete">Eliminar</string>

    <string name="empleado">Empleado</string>
    <string name="fecha">Fecha</string>
    <string name="estado">Estado</string>
    <string name="local">Local</string>

</resources>
