<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paolosport.appa.activities.ActivityPersona"
    android:id="@+id/layout_persona"
    android:orientation="vertical" >


    <ScrollView
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_weight="7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cedula"/>
                    <EditText
                        android:id="@+id/txtCedulaPersona"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cedula_hint" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre" />
                    <EditText
                        android:id="@+id/txtNombrePersona"
                        android:inputType="textPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre_hint"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Telefono" />
                    <EditText
                        android:id="@+id/txtTelefonoPersona"
                        android:inputType="phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telefono_hint"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_weight="1"
                    android:id="@+id/fragment_container"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" >

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <TextView
                    android:id="@+id/txtListaPersonas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_weight="1.25"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black" >

        <Button android:id="@+id/btnCrear"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear"
            android:onClick="guardarPersona"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_ok"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_margin="10dp" />

        <Button
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/btnCrear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="limpiar"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_cancel"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_margin="10dp" />
        </RelativeLayout>

</LinearLayout>
