<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.paolosport.appa.activities.ActivityLocal">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linea">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:text="ingrese id" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtIDLocal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblNombreLocal"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNombreLocal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtListaLocales" />

        <Spinner
            android:id="@+id/spinnerLocal"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:background="@android:drawable/btn_dropdown"
            android:popupBackground="@drawable/abc_popup_background_mtrl_mult"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnGuardar"
                android:text="@string/btnGuardar"
                android:onClick="guardar" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnMostrar"
                android:text="@string/btnMostrar"
                android:onClick="mostrarEntradas"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BUSCAR"
                android:id="@+id/btn_buscar"
                android:onClick="buscar" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ACTUALIZAR"
                android:id="@+id/btnActualizar"
                android:onClick="actualizar" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Eliminar"
                android:id="@+id/btnEliminar"
                android:onClick="eliminar" />


        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
