<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.paolosport.appa.fragments.PersonaFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/ll_izquierdo_local">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:id="@+id/ll_derecho_local">

            <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                android:text="@string/localesPaolo"
                android:textColor="@color/iconos"
                android:shadowColor="@color/white"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textStyle="bold"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ll_crear_local">

                <Space
                    android:layout_width="12dp"
                    android:layout_height="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText"
                    android:text="ID:"
                    android:textColor="#ff202020"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textCursorDrawable="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblNombreLocal"
                    android:textColor="#ff202020"
                    android:id="@+id/textnomloc"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Space
                    android:layout_width="12dp"
                    android:layout_height="12dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtNombreLocal"
                    android:background="@drawable/ab_transparent_verde"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"/>

                <Space
                    android:layout_width="12dp"
                    android:layout_height="24dp" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="GUARDAR"
                    android:id="@+id/button7"
                    android:layout_marginLeft="0dp"
                    android:layout_gravity="left"
                    android:background="@drawable/botonpulsado"
                    android:drawableLeft="@drawable/ico_guardar"
                    android:paddingRight="12dp"
                    android:layout_margin="0dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ll_editar_local">

                <Space
                    android:layout_width="20px"
                    android:layout_height="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Seleccione Local a Editar:"
                    android:textColor="#ff202020"
                    android:id="@+id/txt_locales"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Space
                    android:layout_width="20px"
                    android:layout_height="12dp" />

                <Spinner
                    android:id="@+id/spinnerLocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:entries="@array/nav_options"
                    android:background="@drawable/ab_bottom_solid_estiloandres"
                    android:popupBackground="@android:drawable/editbox_background"
                    />

                <Space
                    android:layout_width="12dp"
                    android:layout_height="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nuevo Nombre:"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView10"
                    android:textColor="@color/black" />

                <Space
                    android:layout_width="12dp"
                    android:layout_height="12dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText2"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:background="@drawable/ab_transparent_verde" />

                <Space
                    android:layout_width="12dp"
                    android:layout_height="24dp" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="GUARDAR"
                    android:id="@+id/button6"
                    android:background="@drawable/botonpulsado"
                    android:drawableLeft="@drawable/ico_guardar"
                    android:paddingRight="12dp"
                    android:layout_margin="0dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ll_eliminar_local">

                <Space
                    android:layout_width="20px"
                    android:layout_height="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Seleccione Local a Eliminar:"
                    android:textColor="#ff202020"
                    android:id="@+id/txt_locales2"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Space
                    android:layout_width="20px"
                    android:layout_height="12dp" />

                <Spinner
                    android:id="@+id/spinnerLocal2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:entries="@array/nav_options"
                    android:background="@drawable/ab_bottom_solid_estiloandres"
                    android:popupBackground="@android:drawable/editbox_background"
                    />

                <Space
                    android:layout_width="20px"
                    android:layout_height="24dp" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ELIMINAR"
                    android:id="@+id/button5"
                    android:background="@drawable/botonpulsado"
                    android:drawableLeft="@drawable/ico_borrar"
                    android:paddingRight="12dp"
                    android:layout_margin="0dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="45dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/ll_listar_local"
            android:visibility="invisible">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView4"></ScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listaLocales"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff202020"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtListaLocales"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
            />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:alpha="100"
        android:background="#ff000000">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Nuevo"
            android:id="@+id/button"
            android:drawableLeft="@drawable/ico_nuevo"
            android:background="@drawable/botonpulsado2"
            android:layout_margin="2dp"
            android:paddingBottom="1dp"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="4dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="EDITAR"
            android:id="@+id/button2"
            android:drawableLeft="@drawable/ico_editar"
            android:background="@drawable/botonpulsado2"
            android:layout_margin="2dp"
            android:paddingBottom="1dp"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Eliminar"
            android:id="@+id/button3"
            android:drawableLeft="@drawable/ico_eliminar"
            android:background="@drawable/botonpulsado2"
            android:layout_margin="2dp"
            android:paddingBottom="1dp"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="LISTAR"
            android:id="@+id/button4"
            android:drawableLeft="@drawable/ico_lista"
            android:background="@drawable/botonpulsado2"
            android:layout_margin="2dp"
            android:paddingBottom="1dp"
            android:paddingRight="4dp"
            android:paddingTop="2dp"
            android:paddingLeft="2dp"
            />
    </LinearLayout>

</FrameLayout>
